Visualization windows now merged to one